# web_sr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fsrs_test.py  pyproject.toml  pytest.ini  web_sr.py
api/: init.py
api/routers/: card.py  deck.py  service.py  template.py
app/api/: init.py
app/api/routers/: card.py  deck.py  service.py  template.py
app/config/: config.py
app/core/: service.py
app/core/models/: card.py  deck.py  template.py
app/core/repository/: __init__.py  interfaces.py
app/core/repository/card/: memmory.py  postgres.py
app/core/repository/deck/: memmory.py  postgres.py
app/core/repository/review_log/: memmory.py  postgres.py
app/core/repository/template/: memmory.py  postgres.py
app/db/: postgres.py
app/exceptions/: exceptions.py  handlers.py
app/schemas/: request.py
config/: config.py
core/: service.py
core/models/: card.py  deck.py  template.py
core/repository/: interfaces.py
core/repository/card/: memmory.py
core/repository/deck/: memmory.py
core/repository/review_log/: memmory.py
core/repository/template/: memmory.py
exceptions/: exceptions.py  handlers.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/websr/: README.md  package-lock.json  package.json
migrations/: 001_init.sql
nginx/: nginx.conf
schemas/: request.py  response.py
tests/: conftest.py  test_config.py
