[tool.poetry]
name = "web_sr"
version = "0.0.1"
description = "web-based simple spaced repetition system"
authors = ["Simon <shimonrudkovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fsrs = "^2.1.1"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
pyzstd = "^0.16.0"
anki = "^24.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
