[tool.poetry]
name = "web_sr"
version = "0.1.0"
description = "web-based simple spaced repetition system"
authors = ["Simon <semen.rudkovskiy@vkpay.com>"]


[tool.poetry.dependencies]
python = "^3.9"
fsrs = "^2.2.1"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
pyzstd = "^0.16.0"
uvicorn = "^0.30.1"


[tool.poetry.dev-dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = false
exclude = '''
^/(
  (
     \.git
    | \.pytest_cache
    | \.run
    | logs
    | docs
    | tests/integration
  )/
)
'''

[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
exclude = [
    '.venv/*',
    'tests/*',
]
